--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "celebrate": "^15.0.3",
+    "dotenv": "16.4.1",
+    "express": "4.19.2",
+    "joi": "^17.13.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "8.4.1",
+    "uuid": "^9.0.1"
   }
 }
